main/default/objects/Status_Report__c/Status_Report__c.object-meta.xml
<CustomObject>
    <label>Status Report</label>
    <nameField>
        <label>Status Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Status Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>