main/default/objects/Status_Report__c/fields/Approve_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approve_Comments__c</fullName>
    <label>Approve Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>