main/default/objects/Status_Report__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Due date for status report approvers.</description>
    <inlineHelpText>This due date for status report approvers.</inlineHelpText>
    <label>Due Date Time</label>
    <type>DateTime</type>
</CustomField>