main/default/objects/Status_Report__c/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <description>Email Body contains email template alert for approver queue members.</description>
    <label>Email Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>