main/default/objects/Status_Report__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Staus report date lies between Event start date and Event end date</errorMessage>
        <filterItems>
            <field>$Source.Report_Date__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>Event__c.Start_Date_Time__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Report_Date__c</field>
            <operation>lessOrEqual</operation>
            <valueField>Event__c.End_Date_Time__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Status Reports</relationshipLabel>
    <relationshipName>Status_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>