main/default/objects/Status_Report__c/fields/Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Event_Location__c</fullName>
    <label>Event Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>