main/default/objects/Status_Report__c/fields/Facilitator_Name1__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Name1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilitator Name1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Status_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>