main/default/objects/Status_Report__c/fields/Facilitator_Name2__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Name2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilitator Name 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Status_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>