main/default/objects/Status_Report__c/fields/Facilitator_Name3__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Name3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilitator Name 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Status_Reports2</relationshipName>
    <type>Lookup</type>
</CustomField>