main/default/objects/Status_Report__c/fields/General_Update__c.field-meta.xml
<CustomField>
    <fullName>General_Update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Update</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only choose general update value into this field</errorMessage>
        <filterItems>
            <field>Status_Report__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Section</value>
        </filterItems>
        <filterItems>
            <field>Status_Report__c.Name</field>
            <operation>contains</operation>
            <value>General Update Section</value>
        </filterItems>
        <infoMessage>To select the General update section content into the template</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Status_Report__c</referenceTo>
    <relationshipLabel>Status Reports(General Updates Headers)</relationshipLabel>
    <relationshipName>General_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>