main/default/objects/Status_Report__c/fields/General_Update_Content__c.field-meta.xml
<CustomField>
    <fullName>General_Update_Content__c</fullName>
    <label>General Update Content</label>
    <length>2400</length>
    <type>Html</type>
</CustomField>