main/default/objects/Status_Report__c/fields/is_Approved_by_Project_Team__c.field-meta.xml
<CustomField>
    <fullName>is_Approved_by_Project_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Approved by Project Team?</label>
    <type>Checkbox</type>
</CustomField>