main/default/objects/Status_Report__c/fields/Is_Approved_by_QA__c.field-meta.xml
<CustomField>
    <fullName>Is_Approved_by_QA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approved by QA?</label>
    <type>Checkbox</type>
</CustomField>