main/default/objects/Status_Report__c/fields/Is_Approved_by_Technical_Editing__c.field-meta.xml
<CustomField>
    <fullName>Is_Approved_by_Technical_Editing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approved by Technical Editing?</label>
    <type>Checkbox</type>
</CustomField>