main/default/objects/Status_Report__c/fields/Parking_Lots__c.field-meta.xml
<CustomField>
    <fullName>Parking_Lots__c</fullName>
    <label>Parking Lots</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>