main/default/objects/Status_Report__c/fields/Project_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Approver_Name__c</fullName>
    <formula>Project_Team_Approver__r.FirstName + &apos; &apos; +  Project_Team_Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Approver Name</label>
    <type>Text</type>
</CustomField>