main/default/objects/Status_Report__c/fields/Project_Team_Approver__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Team Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Status_Reports3</relationshipName>
    <type>Lookup</type>
</CustomField>