main/default/objects/Status_Report__c/fields/QA_Approver__c.field-meta.xml
<CustomField>
    <fullName>QA_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Status_Reports5</relationshipName>
    <type>Lookup</type>
</CustomField>