main/default/objects/Status_Report__c/fields/QA_Approver_Name1__c.field-meta.xml
<CustomField>
    <fullName>QA_Approver_Name1__c</fullName>
    <formula>QA_Approver__r.FirstName + &apos; &apos; +  QA_Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QA Approver Name</label>
    <type>Text</type>
</CustomField>