main/default/objects/Status_Report__c/fields/Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Comments__c</fullName>
    <label>Rejection Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>