main/default/objects/Status_Report__c/fields/Session_Attendance_2__c.field-meta.xml
<CustomField>
    <fullName>Session_Attendance_2__c</fullName>
    <label>Session Attendance</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>