main/default/objects/Status_Report__c/fields/Session_Location__c.field-meta.xml
<CustomField>
    <fullName>Session_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Location</label>
    <referenceTo>Session_Location__c</referenceTo>
    <relationshipLabel>Status Reports</relationshipLabel>
    <relationshipName>Status_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>