main/default/objects/Status_Report__c/fields/Session_Role__c.field-meta.xml
<CustomField>
    <fullName>Session_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Role</label>
    <referenceTo>Session_Role__c</referenceTo>
    <relationshipLabel>Status Reports</relationshipLabel>
    <relationshipName>Status_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>