main/default/objects/Status_Report__c/fields/Status_Report_Logo_URL_del__c.field-meta.xml
<CustomField>
    <fullName>Status_Report_Logo_URL_del__c</fullName>
    <label>Status Report Logo URL</label>
    <type>Url</type>
</CustomField>