main/default/objects/Status_Report__c/fields/Tech_Editing_Approver__c.field-meta.xml
<CustomField>
    <fullName>Tech_Editing_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Editing Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Status_Reports4</relationshipName>
    <type>Lookup</type>
</CustomField>