main/default/objects/Status_Report__c/fields/Tech_Editing_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Tech_Editing_Approver_Name__c</fullName>
    <formula>Tech_Editing_Approver__r.FirstName + &apos; &apos; +  Tech_Editing_Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Editing Approver Name</label>
    <type>Text</type>
</CustomField>