main/default/objects/Status_Report__c/fields/Timezone1__c.field-meta.xml
<CustomField>
    <fullName>Timezone1__c</fullName>
    <description>This time zone for status report approvers.</description>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AKDT</fullName>
                <label>Alaska Daylight Time</label>
            </value>
            <value>
                <fullName>AST</fullName>
                <label>Alaska Standard Time</label>
            </value>
            <value>
                <fullName>CDT</fullName>
                <label>Central Daylight Time</label>
            </value>
            <value>
                <fullName>CST</fullName>
                <label>Central Standard Time</label>
            </value>
            <value>
                <fullName>EDT</fullName>
                <label>Eastern Daylight Time</label>
            </value>
            <value>
                <fullName>EST</fullName>
                <default>true</default>
                <label>Eastern Standard Time</label>
            </value>
            <value>
                <fullName>GT</fullName>
                <label>Gambier Time</label>
            </value>
            <value>
                <fullName>HADT</fullName>
                <label>Hawaii-Aleutian Daylight Time</label>
            </value>
            <value>
                <fullName>HAST</fullName>
                <label>Hawaii-Aleutian Standard Time (America/Adak)</label>
            </value>
            <value>
                <fullName>MT</fullName>
                <label>Marquesas Time</label>
            </value>
            <value>
                <fullName>MPDT</fullName>
                <label>Mexican Pacific Daylight Time</label>
            </value>
            <value>
                <fullName>MPST</fullName>
                <label>Mexican Pacific Standard Time</label>
            </value>
            <value>
                <fullName>MDT</fullName>
                <label>Mountain Daylight Time</label>
            </value>
            <value>
                <fullName>MST</fullName>
                <label>Mountain Standard Time</label>
            </value>
            <value>
                <fullName>PDT</fullName>
                <label>Pacific Daylight Time</label>
            </value>
            <value>
                <fullName>PST</fullName>
                <label>Pacific Standard Time</label>
            </value>
            <value>
                <fullName>PT</fullName>
                <label>Pitcairn Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>