main/default/objects/Status_Report__c/fields/What_s_Not_Working_Content__c.field-meta.xml
<CustomField>
    <fullName>What_s_Not_Working_Content__c</fullName>
    <label>What&apos;s Not Working Content</label>
    <length>1400</length>
    <type>Html</type>
</CustomField>