main/default/objects/Status_Report__c/recordTypes/Header.recordType-meta.xml
<RecordType>
    <fullName>Header</fullName>
    <active>true</active>
    <label>Header</label>
</RecordType>