main/default/objects/Status_Report__c/recordTypes/Section.recordType-meta.xml
<RecordType>
    <fullName>Section</fullName>
    <active>false</active>
    <label>Section</label>
</RecordType>