main/default/objects/Status_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>Session_Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>