main/default/objects/Status_Report__c/listViews/DOD_Quality_Assurance_Approvers_Status_Report.listView-meta.xml
<ListView>
    <fullName>DOD_Quality_Assurance_Approvers_Status_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>Quality Assurance Approvers</label>
    <queue>Quality_Assurance_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>