main/default/objects/Status_Report__c/listViews/Project_Team_Approver_Status_Report.listView-meta.xml
<ListView>
    <fullName>Project_Team_Approver_Status_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>Project Team Approvers</label>
    <queue>Project_Team_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>