main/default/objects/Status_Report__c/listViews/Technical_Editing_Approvers_Status_Report.listView-meta.xml
<ListView>
    <fullName>Technical_Editing_Approvers_Status_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>Technical Editing Approvers</label>
    <queue>Technical_Editing_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>